Improve sweep progress and host filtering